# SimpleMulticast

./: CMakeLists.txt  Dockerfile_client  Dockerfile_server  ListServers.c  RcvMulCast.c  ReadMe.md  SndMulCast.c
